Fixing Responsive Spacing

--- a/css/parallax.css
+++ b/css/parallax.css
@@ -1,7 +1,7 @@
 body, html {
   height: 100%;
   margin: 0;
-  font: 400 20px/1.8 "Lato", sans-serif;
+  font: 400 3vmin/1.8 "Lato", sans-serif;
   color: #777;
 }
 
@@ -44,8 +44,8 @@ h2 {
   font: 4vmax "Lato", sans-serif;
   color: #111;
   text-align: center;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
+  margin-top: 1vmin;
+  margin-bottom: 1vmin;
 }
 
 h3 {
@@ -54,15 +54,15 @@ h3 {
   font: 3vmax "Lato", sans-serif;
   color: #111;
   text-align: center;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
+  margin-top: 1vmin;
+  margin-bottom: 1vmin;
 }
 
 .content {
   color: #777;
   background-color:white;
   text-align:center;
-  padding:50px 80px;
+  padding:40px 80px;
   text-align: justify;
 }
 
@@ -88,4 +88,8 @@ h3 {
 	/* The image used */
     background-image: url("assets/bg5.jpg");
     min-height: 400px;
+}
+
+.marker {
+    height: 5vmin;
 }
